# protocols

./: .Rprofile  .env.example  .gitignore  README.md  data_prep.ipynb  install.sh  main.py  pixi.toml  pyproject.toml  scRNA-seq.sh  sra_pipeline.sh  test.ipynb
R/: cellchat.R  glmmseq.R  install.R  scdblfinder.R
R/utils/: env.R
docker/: cellbender.Dockerfile
notebooks/: annotation.ipynb  cellchat.ipynb  celltype_annotation.ipynb  data_prep.ipynb  integration.ipynb  prep.ipynb  proj.ipynb
notebooks_example/Drokhlyansky/: prep.ipynb
notebooks_example/Heo/: annotation.ipynb  prep.ipynb
notebooks_example/Lin/: prep.ipynb
notebooks_example/Mace/: annotation.ipynb  prep.ipynb
notebooks_example/Zheng/: annotation.ipynb  prep.ipynb
notebooks_example/feng/: annotation.ipynb  prep.ipynb
notebooks_example/inflammatory_bowel_disease/: ibd_prep.ipynb  kong_prep.ipynb  smillie_prep.ipynb
notebooks_example/lin/: prep.ipynb
notebooks_example/macnair/: annotation.ipynb  prep.ipynb
notebooks_example/multiple_sclerosis/: macnair_annotation.ipynb  macnair_prep.ipynb
notebooks_example/pokatayev/: prep.ipynb
pipeline/: main.py  qpcr.py  qpcr_eds.py  scRNA-seq.py
pipeline/config/: constants.py  directory.py  machine_learning.py
pipeline/utils/: cellrank.py  deseq2.py  doublet_composite.py  env.py  extract_mt_gene.py  find_reference_gene.py  get_ensembl_to_symbol.py  glmmseq.py  merge_h5ad.py  plot.py  pseudobulk.py  sccomposite.py  scdblfinder.py  spatial_visualization.py
pipeline/utils/single_cell/: extract_fastq_from_zip.py  merge_h5ad.py  (+1 more)
