[project]
name = "scrna-seq-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anndata>=0.12.7",
    "igraph>=1.0.0",
    "ipykernel>=7.1.0",
    "python-dotenv>=1.2.1",
    "scanpy>=1.11.5",
    "scvi-tools>=1.4.1",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]

[dependency-groups]
dev = ["ty>=0.0.11"]
